# jsipahio.github.io

./: .gitignore  404.html  README.md  contact.html  current.html  education.html  email.sh  experience.html  hello  index.html  mkdocs.yml  papers.html  presentations.html  student_info.py  test.csv
AIN213/schedule/: index.html
CSE122/: index.html
CSE122/dotnet_commands/: index.html
CSE122/setup/: index.html
CSE122/terminal_basics/: index.html
CSE233/: quad.cpp  week11_example.cpp  week12_IntArray_example.cpp  week12_money_example.cpp
CSE233/cpp_options/: index.html
CSE233/schedule/: index.html
CSE233/terminal_basics/: index.html
CSE233/week1/: index.html
CSE233/week10/: index.html
CSE233/week11/: index.html
CSE233/week12/: index.html
CSE233/week13/: index.html
CSE233/week13_extra/: index.html
CSE233/week14/: index.html
CSE233/week2/: index.html
CSE233/week3/: index.html
CSE233/week4/: index.html
CSE233/week5/: index.html
CSE233/week6/: index.html
CSE233/week7/: index.html
CSE233/week8/: index.html
CSE233/week9/: index.html
CSE234/: index.html  stl.html  vector.html  week7_lab.cpp  week7_output.html  week7_starter.cpp
CSE234/algorithms/: index.html
CSE234/iterators/: index.html
CSE234/list/: index.html
CSE234/schedule/: index.html
CSE234/testing/: index.html
CSE234/transform/: index.html
CSE234/types/: index.html
CSE234/vector/: index.html
CSE234/week1/: index.html
CSE234/week10/: index.html
CSE234/week11/: index.html
CSE234/week12/: index.html
CSE234/week13/: index.html
CSE234/week13_lib/: example.cpp  example.hpp
CSE234/week13_lib_and_exe/: example.hpp  main.cpp
CSE234/week13_simple/: CMakeLists.txt
CSE234/week14/: index.html
CSE234/week2/: index.html
CSE234/week3/: index.html
CSE234/week4/: index.html
CSE234/week5/: index.html
CSE234/week6/: index.html
CSE234/week7/: index.html
CSE234/week7_data/: index.html
CSE234/week8/: index.html
CSE234/week9/: index.html
CSE235/python_options/: index.html
CSE235/temp/: index.html
CSE235/week1/: index.html
CSE235/week10/: index.html
CSE235/week11/: index.html
CSE235/week12/: index.html
CSE235/week13/: index.html
CSE235/week14/: index.html
CSE235/week14_example1/: main.py
CSE235/week14_example2/: database.py  main.py  models.py
CSE235/week2/: index.html
CSE235/week3/: index.html
CSE235/week4/: index.html
CSE235/week5/: index.html
CSE235/week6/: index.html
CSE235/week7/: index.html
CSE235/week8/: index.html
CSE235/week9/: index.html
DSA/: index.html  quiz_convert.sh
DSA/ch1/: clock.cpp  index.html
DSA/ch10/: index.html  quiz9.html
DSA/ch11/: index.html  quiz10.html
DSA/ch7/example/: CMakeLists.txt  list.hpp
DSA/ch8/example/: CMakeLists.txt  hashtable.hpp  map.hpp
css/: blaze-theme.css  site.css
cv/: index.html
docs/: cv.md  cv.odt  index.md  teaching.md
docs/CSE234/week13_lab_solution/src/: CMakeLists.txt
docs/CSE234/week13_lib_and_exe/: CMakeLists.txt  example.cpp
docs/DSA/ch6/example/: CMakeLists.txt  CPUScheduler.cpp  XmlValidator.cpp  queue.hpp  stack.hpp  stack.tpp  test_stack.cpp  valid.xml  valid_simple.xml
docs/DSA/ch9/example/: CMakeLists.txt  binarytree.hpp  test_binary_tree.cpp
search/: search_index.json
site/: 404.html  index.html  package-lock.json  package.json
teaching/: index.html
vb-test/: vb-test.vbproj
(+304 files in other folders)
